# research-agent

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: ci.yaml
docs/: impact_of_generative_ai_on_big_data_engineering_field_article.md
src/researcher_demo/: __init__.py  app.py  crew.py
