[project]
name = "researcher-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.4"
dependencies = [
    "crewai>=0.108.0",
    "crewai-tools>=0.38.1",
    "python-dotenv>=1.0.1",
    "streamlit>=1.43.2",
]

[project.scripts]
researcher-demo = "researcher_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
